JVKP/src/objects/Payments__c.object
<CustomObject>
    <fields>
        <fullName>Bank_name__c</fullName>
        <label>Bank name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <label>Projects</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>branch__c</fullName>
        <label>branch</label>
        <picklist>
            <picklistValues>
                <fullName>hyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vizag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>adilabad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_amount__c</fullName>
        <label>payment amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>payment_date__c</fullName>
        <label>payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_name__c</fullName>
        <label>project name</label>
        <picklist>
            <picklistValues>
                <fullName>proj1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>proj2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>